--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -31,7 +31,7 @@
 /* Cambiar el color y el ancho del scrollbar */
 ::-webkit-scrollbar {
   width: 10px;
-  background-color: #F5F5F5;
+  background-color: #f5f5f5;
 }
 
 /* Cambiar el color y el aspecto del thumb (la barra deslizante) */
@@ -43,9 +43,8 @@
 /* Cambiar el color y el aspecto del track (el fondo del scrollbar) */
 ::-webkit-scrollbar-track {
   border-radius: 10px;
-  background-color: #F5F5F5;
+  background-color: #f5f5f5;
 }
-
 
 html,
 body {
@@ -107,8 +106,26 @@ p {
   gap: 2rem;
 }
 
+.subContainer {
+  width: min(100%, 950px);
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  border: none;
+}
+
 .gridContainer {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(min(15rem, 100%), 1fr));
   gap: 1.5rem;
+}
+
+.fixedContainer {
+  position: fixed;
+  right: 1rem;
+  bottom: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 0.615rem;
 }
